# kaitai_struct

./: AGENTS.md
.github/workflows/: main.yml
compiler/: build.sbt
compiler-cpp/: .clang-format  CMakeLists.txt  STYLE.md
compiler-cpp/src/: cli_options.cpp  cli_options.h  codegen.cpp  codegen.h  frontend.cpp  frontend.h  ir.cpp  ir.h  main.cpp
compiler-cpp/tests/: cli_options_test.cpp  codegen_test.cpp  frontend_test.cpp  ir_roundtrip_test.cpp
compiler-cpp/tests/data/: advanced_semantics_subset.ksir  control_flow_subset.ksir  expr_subset_a.ksir  hello_world_minimal.ksir  imports_nested_root.ksir  invalid_cycle.ksir  invalid_switch_duplicate_else.ksir  invalid_unknown_type.ksir  invalid_validation_target.ksir  type_subset.ksir  unsupported_dynamic_switch.ksir  unsupported_instance.ksir  unsupported_validation.ksir  valid_sample.ksir
compiler-cpp/tests/data/imports/: common.ksir
compiler-cpp/tests/data/imports/collision/: a.ksir  b.ksir  root.ksir
compiler-cpp/tests/data/imports/cycle/: a.ksir  b.ksir
compiler-cpp/tests/data/imports/models/: payload.ksir
compiler-cpp/tests/data/imports/types/: base.ksir  extra.ksir
compiler/jvm/src/main/scala/io/kaitai/struct/: JavaMain.scala
compiler/jvm/src/test/resources/io/kaitai/struct/ir/: ir_sample.ksir  ir_validation.ksir
compiler/jvm/src/test/scala/io/kaitai/struct/: JavaMainSpec.scala
compiler/jvm/src/test/scala/io/kaitai/struct/ir/: MigrationIrSpec.scala
compiler/jvm/src/test/scala/io/kaitai/struct/languages/components/: LanguageCompilerStaticSpec.scala
compiler/jvm/src/test/scala/io/kaitai/struct/translators/: ExpressionValidator$Test.scala  TypeDetector$Test.scala
compiler/shared/src/main/scala/io/kaitai/struct/: RuntimeConfig.scala
compiler/shared/src/main/scala/io/kaitai/struct/ir/: MigrationIr.scala
compiler/shared/src/main/scala/io/kaitai/struct/languages/: CppCompiler.scala  LuaCompiler.scala  WiresharkLuaCompiler.scala
compiler/shared/src/main/scala/io/kaitai/struct/languages/components/: LanguageCompilerStatic.scala
compiler/shared/src/main/scala/io/kaitai/struct/translators/: CommonMethods.scala  CppTranslator.scala  LuaTranslator.scala  TypeDetector.scala
doc/: ci.adoc  cpp17_compiler_transition_prompt_plan.md  cpp17_default_flip_readiness.md  cpp17_fallback_policy.md  developers.adoc  index.adoc  kst.adoc  lang_wireshark_lua.adoc  release_notes_cpp17_migration_draft.md  stream_behavior_matrix.md  workflows.adoc
doc/cpp17_migration/: README.md  benchmark_trends.md  building_cpp.md  decision_log.md  ir_spec.md  output_contract.md  parity_checklist.md  risk_register.md
runtime/cpp_stl/kaitai/: kaitaistream.cpp  kaitaistream.h  kaitaistruct.h
runtime/lua/: kaitaistruct.lua  string_decode.lua
runtime/lua/zzlib/: README.md  inflate-bit32.lua  inflate-bwo.lua  zzlib.lua
runtime/python/: kaitaistruct.py
runtime/zig/src/: root.zig
tests/: README.md  build-compiler  build-formats  ci-cpp17-differential  ci-cpp17-readiness-review  ci-cpp_stl_17  ci-python  config  run-cpp_stl_17  run-python
tests/builder/: cpp_builder.rb
tests/formats_err/: expr_call_non_method.ksy
tests/migration_golden/: README.md  benchmark_fixtures.tsv  build_formats_exclusions.tsv  check_compiler_engine_switch.sh  compare_cpp17_advanced_semantics.sh  compare_cpp17_expr_subset_a.sh  compare_cpp17_from_ir.sh  compare_cpp17_imports.sh  compare_cpp17_type_subset.sh  cpp17_differential_fixtures.tsv  cpp17_validate_supported_subset_audit.md  fixtures.tsv  generate_scala_snapshots.sh  normalize_compiler_output.py  require_build_formats_summary.py  run_cpp17_benchmarks.py  run_cpp17_differential.py  test_benchmark_schema.py  test_run_cpp17_differential.py  validate_cpp17_gate_examples.py  validate_cpp17_readiness_checklist.py
tests/migration_golden/fixtures/: cpp17_dynamic_switch_expr.ksy  cpp17_empty_parity.ksy
tests/migration_golden/scala/: SHA256SUMS  enum_1.snapshot  imports_cast_to_imported.snapshot  instance_std.snapshot  primitives_default_big_endian.snapshot  process_xor_const.snapshot  repeat_n_bytes.snapshot  str_encodings.snapshot  switch_integers.snapshot  type_unknown_error.snapshot  valid_fail_eq_int.snapshot
tests/spec/cpp_stl_17/: CMakeLists.txt  test_expr_bytes_non_literal.cpp  test_runtime_stream_eof_semantics.cpp  test_yaml_ints.cpp
tests/spec/lua/: test_runtime_stream_eof_semantics.lua
tests/spec/python/spec/: test_runtime_stream_eof_semantics.py
tests/spec/python/specwrite/: test_bytes_eos_pad_term.py  test_cast_to_top.py  test_instance_io_user_earlier.py  test_io_local_var.py  test_process_rotate.py
tests/spec/ruby/: runtime_stream_eof_semantics_spec.rb
tests/translator/src/main/scala/io/kaitai/struct/testtranslator/: Main.scala  TestTranslator.scala
